Add to-do list to tasks
